[gd_scene load_steps=13 format=2]

[ext_resource path="res://TitleScreen/titlescreen.png" type="Texture" id=1]
[ext_resource path="res://TitleScreen/PlayGame.png" type="Texture" id=2]
[ext_resource path="res://TitleScreen/quitGame.png" type="Texture" id=3]
[ext_resource path="res://TitleScreen/playButton.gd" type="Script" id=4]
[ext_resource path="res://TitleScreen/quitButton.gd" type="Script" id=5]
[ext_resource path="res://TitleScreen/options.png" type="Texture" id=6]
[ext_resource path="res://TitleScreen/TitleScreen.gd" type="Script" id=7]
[ext_resource path="res://Interface/Options.tscn" type="PackedScene" id=8]
[ext_resource path="res://viking2.png" type="Texture" id=9]
[ext_resource path="res://Interface/back.png" type="Texture" id=10]
[ext_resource path="res://sprites/Big Monster/idle.png" type="Texture" id=11]

[sub_resource type="Animation" id=1]
resource_name = "idle"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6 ]
}

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.352941 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="Menu"]
margin_right = 160.0
margin_bottom = 180.0
size_flags_horizontal = 0
texture = ExtResource( 1 )

[node name="Buttons" type="VBoxContainer" parent="Menu"]
margin_left = 164.0
margin_right = 320.0
margin_bottom = 180.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="playButton" type="Button" parent="Menu/Buttons"]
margin_top = 31.0
margin_right = 156.0
margin_bottom = 57.0
focus_mode = 0
mouse_default_cursor_shape = 2
enabled_focus_mode = 0
icon = ExtResource( 2 )
flat = true
script = ExtResource( 4 )

[node name="optionsButton" type="Button" parent="Menu/Buttons"]
margin_top = 77.0
margin_right = 156.0
margin_bottom = 103.0
focus_mode = 0
mouse_default_cursor_shape = 2
enabled_focus_mode = 0
icon = ExtResource( 6 )
flat = true

[node name="quitButton" type="Button" parent="Menu/Buttons"]
margin_top = 123.0
margin_right = 156.0
margin_bottom = 149.0
focus_mode = 0
mouse_default_cursor_shape = 2
enabled_focus_mode = 0
icon = ExtResource( 3 )
flat = true
script = ExtResource( 5 )

[node name="Options" parent="." instance=ExtResource( 8 )]

[node name="backButton" type="Button" parent="."]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -32.0
margin_right = 112.0
icon = ExtResource( 10 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 160, 78 )
texture = ExtResource( 11 )
vframes = 6
frame = 2

[node name="PlayerSprite" type="Sprite" parent="."]
position = Vector2( 76, 16 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 9 )
vframes = 6
hframes = 9
frame = 3

[node name="animator" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 1 )
[connection signal="pressed" from="Menu/Buttons/playButton" to="Menu/Buttons/playButton" method="_on_playButton_pressed"]
[connection signal="pressed" from="Menu/Buttons/optionsButton" to="." method="_on_optionsButton_pressed"]
[connection signal="pressed" from="Menu/Buttons/quitButton" to="Menu/Buttons/quitButton" method="_on_quitButton_pressed"]
[connection signal="pressed" from="backButton" to="." method="_on_backButton_pressed"]
